--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -23,6 +23,12 @@
 FROM centos:centos7
 MAINTAINER Tatsuya Kawano
 
+# Please change this value to force the builders at Quay.io/Docker Hub
+# to omit the cached Docker images. This will have the same effect to
+# adding `--no-cache` to `docker build` command.
+#
+ENV DOCKERFILE_UPDATED 2015-09-24
+
 RUN (yum -y update && \
 # Install basic utilities
      yum -y install curl git tar wget && \
@@ -55,11 +61,11 @@ RUN (kerl build git https://github.com/erlang/otp.git OTP-17.5.6.3 17.5.6.3_hipe
      /usr/local/erlang/show-otp-version.escript)
 
 # Install Erlang/OTP 18 with kerl
-RUN (kerl build git https://github.com/erlang/otp.git OTP-18.0.3 18.0.3_hipe && \
-     kerl install 18.0.3_hipe /usr/local/erlang/18.0.3_hipe && \
-     kerl delete build 18.0.3_hipe && \
+RUN (kerl build git https://github.com/erlang/otp.git OTP-18.1 18.1_hipe && \
+     kerl install 18.1_hipe /usr/local/erlang/18.1_hipe && \
+     kerl delete build 18.1_hipe && \
      rm -rf /root/.kerl/gits/* && \
-     source /usr/local/erlang/18.0.3_hipe/activate && \
+     source /usr/local/erlang/18.1_hipe/activate && \
      /usr/local/erlang/show-otp-version.escript && \
 # Show kerl staus
      kerl status)
