--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
 ## The MIT License
 ##
-## Copyright (C) 2015 by Tatsuya Kawano
+## Copyright (C) 2015-2016 by Tatsuya Kawano
 ##
 ## Permission is hereby granted, free of charge, to any person obtaining a copy
 ## of this software and associated documentation files (the "Software"), to deal
@@ -27,7 +27,7 @@ MAINTAINER Tatsuya Kawano
 # to omit the cached Docker images. This will have the same effect to
 # adding `--no-cache` to `docker build` command.
 #
-ENV DOCKERFILE_UPDATED 2015-12-22
+ENV DOCKERFILE_UPDATED 2016-01-16
 
 RUN (yum -y update && \
 # Install basic utilities
@@ -65,7 +65,7 @@ RUN (OTP_VERSION=17.5.6.7 && \
      /usr/local/erlang/show-otp-version.escript)
 
 # Install Erlang/OTP 18 with kerl
-RUN (OTP_VERSION=18.2.1 && \
+RUN (OTP_VERSION=18.2.2 && \
      BUILD_NAME=${OTP_VERSION}_hipe && \
      kerl build git https://github.com/erlang/otp.git OTP-${OTP_VERSION} ${BUILD_NAME} && \
      kerl install ${BUILD_NAME} /usr/local/erlang/${BUILD_NAME} && \
